# deploying-ml-model-azure-devops

./: .azure_envs.sh.template  .gitignore  Makefile  README.md  pyproject.toml
.devops/pipelines/: azure-pipelines.yaml
docker/: Dockerfile
src/: client.py  client_utils.py  detect.py  run_locally.py  server.py
terraform/environments/prod/: input.tf  main.tf  terraform.tfvars.template
terraform/modules/appservice/: appservice.tf  input.tf
terraform/modules/resource_group/: input.tf  rg.tf
